--- a/module2/index.html
+++ b/module2/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+<meta name="viewpoint" content="width=device-width, initial-scale=1">
+<title>Assigment solution for Module 2</title>
+<link rel="stylesheet" href="CSS/style.css">
 	<body>
-		<h1>Hello Coursera! it's grekkkate!</h1>
-
+		<h1>Our menu</h1>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-md-12 decor"> 
+					<div class="chicken">Chicken</div>
+						<div> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p></div>
+				</div>
+				<div class="col-lg-4 col-md-4 col-md-12 decor"> 
+					<div class="beef">Beef</div>
+						<div> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p></div>
+				</div>
+				<div class="col-lg-4 col-md-41 col-md-12 decor"> 
+					<div class="sushi">Sushi</div>
+						<div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+				</div>
+			</div>
+		</div>
 	</body>
 </head>
 </html>
